sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:16: error: not found: value j
  echange(j,minpos);
          ^